# rmr1

./: .env.prod  .gitignore  README.md  corrupt_files.txt  data_functions.py  data_loading.py  database.py  db_functions.py  gripStrength-plotly-grouped-additional-logic-bonus.html  gripStrength-plotly-grouped-additional-logic.html  image_editor.py  image_storage.py  llm.py  llm_sql.py  main.py  models.py  mouse_data.py  mouse_images.json  output.txt  prompt.py  prompt.txt  pyproject.toml  run_ocr.py  server.py  sql_db.py  streamlit_app.py  survival_data.json  test.py
backend/: llm.py  models.py  mouse_data.py
data/: group_description.csv  image_results copy 2.csv  image_results copy.csv  image_results.csv  image_results_before_enrichment.csv  image_results_old.csv  mouse_study.db  survival_data.json
data_processing/: convert_images.py  convert_pdf.py  data_loading.py  enrich_mouse_data.py  extract_group_sex.py  fix_dates.py  image_editor.py  import_spreadsheets.py  run_data_conversion.py  utils.py
devops/: config.sh  connect_ssh.sh  copy_images.sh  create_service.sh  deploy.sh  setup_server.sh
static/: app.js  styles.css
templates/: index.html
