[tool.poetry]
name = "rmr1"
version = "0.1.0"
description = "RMR1"
authors = ["Daniel Duma <danielduma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
seaborn = "^0.13.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
streamlit = "^1.39.0"
plotly = "^5.24.1"
litellm = "^1.48.12"
google-auth = "^2.35.0"
python-dotenv = "^1.0.1"
google-cloud-storage = "^2.19.0"
pyqt6 = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
